fixed spacing in labels

--- a/src/components/Modal/ModalCard.scss
+++ b/src/components/Modal/ModalCard.scss
@@ -24,5 +24,6 @@
     font-size: 18px;
     font-weight: 400;
     font-family: 'Helvetica', sans-serif;
+    margin-left: 5px;
   }
 }
